# flygame

./: .gitignore  README.md  launch.bat
cpp/: CMakeLists.txt
cpp/cmake/: gen_implib.bat
cpp/data/: nmf_complete.xml
cpp/src/: brain.h  brain_viewport.h  fly_model.h  fly_state.h  fly_tcp.h  gait.h  main.cc  nmf_cpg.h  nmf_walk_data.h  proprio.h  sim.h  tcp.h  types.h
mecha-fly/: CMakeLists.txt
mecha-fly/core/: nmf_cpg.h  nmf_fk.h  nmf_hybrid.h  nmf_ik.h  nmf_leg_geometry.h  nmf_step_fit.h  nmf_stepper.h  nmf_walk_data.h  nmf_walk_spline.h  nmf_wing.h
mecha-fly/tests/: test_cpg.cc  test_harness.h
mechabrain/: CMakeLists.txt  README.md
mechabrain/bridge/: bridge_channel.h  bridge_checkpoint.h  calibrator.h  file_read_channel.h  hardware_channel.h  light_model.h  neuron_replacer.h  opsin_model.h  optogenetic_writer.h  protocol.h  shadow_tracker.h  spike_decoder.h  stimulus.h  tcp_bridge.h  twin_bridge.h  validation.h
mechabrain/core/: behavioral_fingerprint.h  brain_spec_loader.h  calcium_plasticity.h  cell_type_defs.h  cell_types.h  checkpoint.h  compartmental_neuron.h  config_loader.h  connectome_export.h  connectome_loader.h  connectome_stats.h  cpg.h  digital_compensator.h  error.h  experiment_config.h  experiment_optimizer.h  experiment_protocol.h  gap_junctions.h  inhibitory_plasticity.h  intrinsic_homeostasis.h  izhikevich.h  log.h  memory_tracker.h  motor_output.h  multiscale_bridge.h  neuromodulator_effects.h  neuron_array.h  nmda.h  nwb_export.h  param_sweep.h  parametric_gen.h  parametric_sync.h  platform.h  proprioception.h  rate_monitor.h  recorder.h  region_metrics.h  scan_overlay.h  scoped_timer.h  short_term_plasticity.h  (+10 more)
mechabrain/cuda/: gpu_manager.h  izhikevich_kernel.cu  kernels.cuh  spike_propagation_kernel.cu  stdp_kernel.cu
mechabrain/docs/: api_reference.md  methods.md
mechabrain/experiments/: 01_conditioning.h  02_visual_escape.h  03_navigation.h  04_whisker.h  05_prey_capture.h  06_courtship.h  07_twinning.h  08_ablation.h  09_compensated_ablation.h  10_grooming.h  11_sleep.h
mechabrain/io/: channel.h  spike_decoder.h
mechabrain/optogenetics/: optimizer.h  opto_io.h  optogenetics.h
mechabrain/tests/: test_brain_sim.cc  test_core.cc  test_harness.h  test_parametric.cc  test_tissue.cc
mechabrain/tissue/: brain_sdf.h  lod_chunks.h  lod_config.h  lod_manager.h  lod_transition.h  neural_field.h  neuromodulator_field.h  population_model.h  voxel_grid.h
mujoco-game/: CMakeLists.txt  README.md  sim.h  tcp.h  types.h
mujoco-game/tests/: test_harness.h  test_protocol.cc
